# CarPPathy

./: CMakeLists.txt  main.cpp
.github/workflows/: build_cmake.yml
include/: Layer.hpp  MLP.hpp  Neuron.hpp  Value.hpp  ValueImpl.hpp
src/: Layer.cpp  MLP.cpp  Neuron.cpp  Value.cpp  ValueImpl.cpp
tests/: MLP_test.cpp  Neuron_test.cpp  Value_test.cpp
